--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
-lib64/
 parts/
 sdist/
 var/
@@ -55,3 +53,4 @@ docs/_build/
 
 # PyBuilder
 target/
+.idea/
